feat: framework finished

--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -12,3 +12,5 @@ error.workspace = true
 async-trait.workspace = true
 video.workspace = true
 tokio.workspace = true
+tera.workspace = true
+serde.workspace = true
