--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,18 @@
 [workspace]
 resolver = "2"
-members = ["backend", "config", "error", "javcap", "video"]
+members = [
+    "crates/backend",
+    "crates/config",
+    "crates/error",
+    "crates/javcap",
+    "crates/video",
+]
 
 [workspace.dependencies]
-error = { path = "error" }
-config = { path = "config" }
-video = { path = "video" }
-backend = { path = "backend" }
+error = { path = "crates/error" }
+config = { path = "crates/config" }
+video = { path = "crates/video" }
+backend = { path = "crates/backend" }
 
 toml = "0.8.12"
 serde = { version = "1.0.197", features = ["derive"] }
@@ -19,3 +25,4 @@ nom = "7.1.3"
 reqwest = { version = "0.12.3", features = ["json"] }
 scraper = "0.19.0"
 async-trait = "0.1.80"
+tera = "1.19.1"
