--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,15 @@ indicatif = { version = "0.17.8", features = ["tokio"] }
 console = "0.15.8"
 walkdir = "2.5.0"
 nom = "7.1.3"
-reqwest = { version = "0.12.3", features = ["json"] }
+reqwest = { version = "0.12.3", features = [
+    "json",
+    "brotli",
+    "deflate",
+    "gzip",
+] }
 scraper = "0.19.0"
 async-trait = "0.1.80"
 tera = "1.19.1"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+tracing-appender = "0.2.3"
