--- a/crates/javcap/Cargo.toml
+++ b/crates/javcap/Cargo.toml
@@ -14,3 +14,6 @@ console.workspace = true
 walkdir.workspace = true
 video.workspace = true
 backend.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+tracing-appender.workspace = true
