--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -10,8 +10,8 @@ reqwest.workspace = true
 scraper.workspace = true
 error.workspace = true
 async-trait.workspace = true
-video.workspace = true
 tokio.workspace = true
 tera.workspace = true
 serde.workspace = true
 tracing.workspace = true
+nom.workspace = true
