--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,10 @@
 [workspace]
 resolver = "2"
-members = [
-    "crates/backend",
-    "crates/config",
-    "crates/error",
-    "crates/javcap",
-    "crates/video",
-]
+members = ["crates/backend", "crates/config", "crates/error", "crates/javcap"]
 
 [workspace.dependencies]
 error = { path = "crates/error" }
 config = { path = "crates/config" }
-video = { path = "crates/video" }
 backend = { path = "crates/backend" }
 
 toml = "0.8.12"
@@ -32,5 +25,6 @@ scraper = "0.19.0"
 async-trait = "0.1.80"
 tera = "1.19.1"
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
 tracing-appender = "0.2.3"
+tracing-subscriber = { version = "0.3.18", features = ["time", "local-time"] }
+time = { version = "0.3.36", features = ["macros"] }
