--- a/crates/javcap/Cargo.toml
+++ b/crates/javcap/Cargo.toml
@@ -12,8 +12,8 @@ tokio.workspace = true
 indicatif.workspace = true
 console.workspace = true
 walkdir.workspace = true
-video.workspace = true
 backend.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-appender.workspace = true
+time.workspace = true
