--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -11,7 +11,7 @@ scraper.workspace = true
 error.workspace = true
 async-trait.workspace = true
 tokio.workspace = true
-tera.workspace = true
 serde.workspace = true
 tracing.workspace = true
 nom.workspace = true
+indoc.workspace = true
