--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,8 @@ reqwest = { version = "0.12.3", features = [
 ] }
 scraper = "0.19.0"
 async-trait = "0.1.80"
-tera = "1.19.1"
 tracing = "0.1.40"
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.18", features = ["time", "local-time"] }
 time = { version = "0.3.36", features = ["macros"] }
+indoc = "2.0.5"
