--- a/crates/javcap/Cargo.toml
+++ b/crates/javcap/Cargo.toml
@@ -17,3 +17,7 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-appender.workspace = true
 time.workspace = true
+
+[[bin]]
+name = "javcap"
+path = "src/main.rs"
