--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,8 @@ reqwest = { version = "0.12.3", features = [
     "brotli",
     "deflate",
     "gzip",
-] }
+    "rustls-tls",
+], default-features = false }
 scraper = "0.19.0"
 async-trait = "0.1.80"
 tracing = "0.1.40"
