--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,26 +48,33 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - build: stable-x86
+          - build: stable-x86-musl
             os: ubuntu-latest
             rust: stable
             target: x86_64-unknown-linux-musl
-          - build: stable-aarch64
+          - build: stable-x86-gnu
+            os: ubuntu-latest
+            rust: stable
+            target: x86_64-unknown-linux-gnu
+            
+          - build: stable-aarch64-musl
             os: ubuntu-latest
             rust: stable
             target: aarch64-unknown-linux-musl
+          - build: stable-aarch64-gnu
+            os: ubuntu-latest
+            rust: stable
+            target: aarch64-unknown-linux-gnu
+            
           - build: macos
             os: macos-latest
             rust: stable
             target: x86_64-apple-darwin
+            
           - build: win-msvc
             os: windows-latest
             rust: stable
             target: x86_64-pc-windows-msvc
-          - build: win-gnu
-            os: windows-latest
-            rust: stable-x86_64-gnu
-            target: x86_64-pc-windows-gnu
 
     steps:
       - name: Checkout repository
