fix: move other

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,6 +120,7 @@ jobs:
       - name: Creating directory for archive
         shell: bash
         run: |
+          mkdir -p "$ARCHIVE"
           cp "$BIN" "$ARCHIVE"/
           cp {README.md,LICENSE} "$ARCHIVE"/
 
