feat: remove empty dir support

--- a/crates/javcap/Cargo.toml
+++ b/crates/javcap/Cargo.toml
@@ -17,3 +17,4 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-appender.workspace = true
 time.workspace = true
+async-recursion.workspace = true
