--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.18", features = ["time", "local-time"] }
 time = { version = "0.3.36", features = ["macros"] }
 indoc = "2.0.5"
+async-recursion = "1.1.0"
 
 [profile.release]
 lto = true
