--- a/crates/javcap/Cargo.toml
+++ b/crates/javcap/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "javcap"
-version = "0.1.0"
+version = "0.1.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,11 +9,12 @@ edition = "2021"
 error.workspace = true
 config.workspace = true
 tokio.workspace = true
-indicatif.workspace = true
-console.workspace = true
 walkdir.workspace = true
 backend.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 tracing-appender.workspace = true
 time.workspace = true
+console.workspace = true
+indicatif.workspace = true
+reqwest.workspace = true
