--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,15 @@
 [workspace]
 resolver = "2"
-members = ["crates/backend", "crates/config", "crates/error", "crates/javcap"]
+members = ["crates/backend", "crates/config", "crates/javcap"]
 default-members = ["crates/javcap"]
 
 [workspace.dependencies]
-error = { path = "crates/error" }
 config = { path = "crates/config" }
 backend = { path = "crates/backend" }
 
 toml = "0.8.12"
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.37.0", features = ["full"] }
-thiserror = "1.0.58"
 indicatif = { version = "0.17.8", features = ["tokio"] }
 console = "0.15.8"
 walkdir = "2.5.0"
@@ -31,6 +29,7 @@ tracing-subscriber = { version = "0.3.18", features = ["time", "local-time"] }
 time = { version = "0.3.36", features = ["macros"] }
 indoc = "2.0.5"
 base64 = "0.22.0"
+anyhow = "1.0.82"
 
 [profile.release]
 lto = true
