--- a/crates/config/config.default.toml
+++ b/crates/config/config.default.toml
@@ -14,6 +14,10 @@ exclude = []
 # 那些后缀的文件会被识别为视频文件。
 ext = ["mp4", "mkv", "avi", "ts", "mov"]
 
+[video]
+# 是否翻译视频信息，免费翻译接口限制2秒一次，每天1000次，如果翻译失败会使用未翻译的信息。
+translate = false
+
 [network]
 # 网络的代理地址。
 proxy = "http://127.0.0.1:8888"
