--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+macros = { path = "macros" }
+
 reqwest.workspace = true
 scraper.workspace = true
 async-trait.workspace = true
