--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [workspace]
 resolver = "2"
-members = ["crates/backend", "crates/config", "crates/javcap"]
-default-members = ["crates/javcap"]
+members = ["backend", "config", "javcap"]
+default-members = ["javcap"]
 
 [workspace.dependencies]
-config = { path = "crates/config" }
-backend = { path = "crates/backend" }
+config = { path = "config" }
+backend = { path = "backend" }
 
 toml = "0.8.12"
 serde = { version = "1.0.197", features = ["derive"] }
