--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,7 +99,7 @@ jobs:
       - name: Build release binary
         shell: bash
         run: |
-          VERSION="${{ needs.create-release.outputs.version }}"
+          export VERSION="${{ needs.create-release.outputs.version }}"
           cargo install cross
           cross build --verbose --release ${{ env.TARGET_FLAGS }}
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
