test: enable pretty assert

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ indoc = "2.0.5"
 base64 = "0.22.0"
 anyhow = "1.0.82"
 validator = { version = "0.18.1", features = ["derive"] }
+pretty_assertions = "1.4.0"
 
 [profile.release]
 lto = true
