--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -22,3 +22,4 @@ base64.workspace = true
 anyhow.workspace = true
 config.workspace = true
 walkdir.workspace = true
+pretty_assertions.workspace = true
