--- a/config/config.default.toml
+++ b/config/config.default.toml
@@ -21,6 +21,7 @@ remove_empty = false
 # 如果翻译失败会使用未翻译的信息。
 # 可选择项
 # disable
+# app_world 一个免费的接口
 translate = "disable"
 # 视频该以哪种规则分类，默认为 厂商/号码，可选择的值为["title", "id", "director", "studio", "actor"]
 rules = ["studio", "id"]
