--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Check spelling of file.txt
+      - name: Check spelling
         uses: crate-ci/typos@master
 
       - name: Install Rust
