--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
-config.toml
-logs/
+javcap.toml
+javcap.log
 dev/
 
 *.DS_Store
