添加了breaking change的支持

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -15,3 +15,6 @@ changelog:
     - title: "🐛 Bug Fixes"
       labels:
         - "bug"
+    - title: 🛠 Breaking Changes
+      labels:
+        - "breaking change"
