--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,7 +13,7 @@ scraper.workspace = true
 async-trait.workspace = true
 tokio.workspace = true
 serde.workspace = true
-tracing.workspace = true
+log.workspace = true
 nom.workspace = true
 indoc.workspace = true
 indicatif.workspace = true
