--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ validator = { version = "0.18.1", features = ["derive"] }
 pretty_assertions = "1.4.0"
 uuid = { version = "1.8.0", features = ["v4"] }
 sha256 = "1.5.0"
+log = "0.4.21"
 
 [profile.release]
 lto = true
