--- a/.github/release.yml
+++ b/.github/release.yml
@@ -12,7 +12,7 @@ changelog:
     - title: 🏕 Features
       labels:
         - "enhancement"
-    - title: "🐛 Bug Fixes"
+    - title: 🐛 Bug Fixes
       labels:
         - "bug"
     - title: 🛠 Breaking Changes
