--- a/crates/config/config.default.toml
+++ b/crates/config/config.default.toml
@@ -1,1 +1,7 @@
-hello = "world"
+[input]
+path = ""
+exts = ["mp4", "avi", "mov", "m4v", "mkv", "flv", "rmvb", "wmv"]
+excludes = ["output"]
+
+[output]
+path = ""
