--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { version = "1.43.0", features = [
     "rt-multi-thread",
     "fs",
     "io-util",
+    "sync",
 ] }
 whoami = "1.5.2"
 toml = "0.8.19"
