--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ async-trait = "0.1.86"
 reqwest = { version = "0.12.12", features = ["json"] }
 uuid = { version = "1.13.1", features = ["v4"] }
 sha256 = "1.5.0"
+colored = "3.0.0"
 
 [profile.release]
 lto = true
