--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,10 +36,16 @@ indoc = "2.0.5"
 getset = "0.1.4"
 ratelimit = "0.10.0"
 async-trait = "0.1.86"
-reqwest = { version = "0.12.12", features = ["json"] }
+reqwest = { version = "0.12.12", features = [
+    "json",
+    "brotli",
+    "gzip",
+    "deflate",
+] }
 uuid = { version = "1.13.1", features = ["v4"] }
 sha256 = "1.5.0"
 colored = "3.0.0"
+select = "0.6.0"
 
 [profile.release]
 lto = true
