--- a/crates/spider/Cargo.toml
+++ b/crates/spider/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 nfo.workspace = true
 video.workspace = true
 config.workspace = true
+app.workspace = true
 
 tokio.workspace = true
 anyhow.workspace = true
 ratelimit.workspace = true
 async-trait.workspace = true
 reqwest.workspace = true
+select.workspace = true
