--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,6 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
-javcap.toml
-javcap.log
-dev/
+.DS_Store
 
-*.DS_Store
+dev/
