--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,40 +1,51 @@
 [workspace]
 resolver = "2"
-members = ["backend", "config", "javcap"]
-default-members = ["javcap"]
+members = [
+    "crates/app",
+    "crates/config",
+    "crates/javcap",
+    "crates/nfo",
+    "crates/spider",
+    "crates/translator",
+    "crates/video",
+]
 
 [workspace.dependencies]
-config = { path = "config" }
-backend = { path = "backend" }
+config = { path = "crates/config" }
+app = { path = "crates/app" }
+video = { path = "crates/video" }
+nfo = { path = "crates/nfo" }
+spider = { path = "crates/spider" }
+translator = { path = "crates/translator" }
 
-toml = "0.8.12"
-serde = { version = "1.0.197", features = ["derive"] }
-tokio = { version = "1.37.0", features = ["full"] }
-indicatif = { version = "0.17.8", features = ["tokio"] }
-console = "0.15.8"
-walkdir = "2.5.0"
-nom = "7.1.3"
-reqwest = { version = "0.12.3", features = [
+anyhow = "1.0.95"
+tokio = { version = "1.43.0", features = [
+    "macros",
+    "rt-multi-thread",
+    "fs",
+    "io-util",
+    "sync",
+    "time",
+] }
+whoami = "1.5.2"
+toml = "0.8.19"
+serde = { version = "1.0.217", features = ["derive"] }
+validator = { version = "0.20.0", features = ["derive"] }
+nom = "8.0.0"
+indoc = "2.0.5"
+getset = "0.1.4"
+ratelimit = "0.10.0"
+async-trait = "0.1.86"
+reqwest = { version = "0.12.12", features = [
     "json",
     "brotli",
-    "deflate",
     "gzip",
-    "rustls-tls",
-], default-features = false }
-scraper = "0.19.0"
-async-trait = "0.1.80"
-tracing = "0.1.40"
-tracing-appender = "0.2.3"
-tracing-subscriber = { version = "0.3.18", features = ["time", "local-time"] }
-time = { version = "0.3.36", features = ["macros"] }
-indoc = "2.0.5"
-base64 = "0.22.0"
-anyhow = "1.0.82"
-validator = { version = "0.18.1", features = ["derive"] }
-pretty_assertions = "1.4.0"
-uuid = { version = "1.8.0", features = ["v4"] }
+    "deflate",
+] }
+uuid = { version = "1.13.1", features = ["v4"] }
 sha256 = "1.5.0"
-log = "0.4.21"
+colored = "3.0.0"
+select = "0.6.0"
 
 [profile.release]
 lto = true
