--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,11 @@ indoc = "2.0.5"
 getset = "0.1.4"
 ratelimit = "0.10.0"
 async-trait = "0.1.86"
-reqwest = { version = "0.12.12", features = [
+reqwest = { version = "0.12.12", default-features = false, features = [
+    "charset",
+    "http2",
+    "macos-system-configuration",
+    "rustls-tls",
     "json",
     "brotli",
     "gzip",
