--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,3 +45,5 @@ jobs:
         with:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
+          EXTRA_FILES: "README.md LICENSE"
+          SRC_DIR: "crates/javcap"
