--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
-          EXTRA_FILES: "README.md LICENSE"
-          SRC_DIR: "crates/javcap"
+          EXTRA_FILES: README.md LICENSE
+          SRC_DIR: crates/javcap
           STATIC_LINKING: false
+          TOOLCHAIN_VERSION: stable
