--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,16 @@ jobs:
             os: windows-latest
           - target: x86_64-pc-windows-gnu
             os: windows-latest
+          - target: x86_64-pc-windows-gnullvm
+            os: windows-latest
+          - target: aarch64-pc-windows-msvc
+            os: windows-latest
+          - target: aarch64-pc-windows-gnullvm
+            os: windows-latest
 
           - target: x86_64-apple-darwin
+            os: macos-latest
+          - target: aarch64-apple-darwin
             os: macos-latest
 
     runs-on: ${{ matrix.os }}
