--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,4 +56,4 @@ jobs:
           executable-name: javcap
           target: ${{ matrix.target }}
           extra-files: README.md LICENSE
-          args: --relase
+          args: --release
