--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ colored = "3.0.0"
 select = "0.6.0"
 log = "0.4.25"
 env_logger = "0.11.6"
-self_update = { version = "0.42.0", features = [
+self_update = { version = "0.42.0", default-features = false, features = [
     "archive-tar",
     "archive-zip",
     "rustls",
