--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,5 +62,5 @@ jobs:
           executable-name: javcap
           target: ${{ matrix.target }}
           extra-files: |
-            README.md \
+            README.md
             LICENSE
