--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,58 +9,130 @@ permissions:
   contents: write
 
 jobs:
-  release:
-    name: release ${{ matrix.target }}
+  create-release:
+    name: create-release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Get the release version from the tag
+        run: echo "VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
+      - name: Show the version
+        run: |
+          echo "version is: $VERSION"
+      - name: Create GitHub release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release create $VERSION --draft --generate-notes --verify-tag --title $VERSION
+    outputs:
+      version: ${{ env.VERSION }}
+
+  build-release:
+    name: build-release
+    needs: ["create-release"]
+    runs-on: ${{ matrix.os }}
+    env:
+      RUST_BACKTRACE: 1
     strategy:
       fail-fast: false
       matrix:
         include:
-          - target: x86_64-unknown-linux-musl
-            os: ubuntu-latest
-          - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
-          - target: aarch64-unknown-linux-musl
-            os: ubuntu-latest
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
+          - os: ubuntu-latest
+            rust: stable
+            target: x86_64-unknown-linux-musl
+          - os: ubuntu-latest
+            rust: stable
+            target: x86_64-unknown-linux-gnu
+          - os: ubuntu-latest
+            rust: stable
+            target: aarch64-unknown-linux-musl
+          - os: ubuntu-latest
+            rust: stable
+            target: aarch64-unknown-linux-gnu
 
-          - target: x86_64-pc-windows-msvc
-            os: windows-latest
-          - target: x86_64-pc-windows-gnu
-            os: windows-latest
-          - target: aarch64-pc-windows-msvc
-            os: windows-latest
+          - os: macos-latest
+            rust: stable
+            target: aarch64-apple-darwin
+          - os: macos-latest
+            rust: stable
+            target: x86_64-apple-darwin
 
-          - target: x86_64-apple-darwin
-            os: macos-latest
-          - target: aarch64-apple-darwin
-            os: macos-latest
+          - os: windows-latest
+            rust: stable
+            target: x86_64-pc-windows-msvc
+          - os: windows-latest
+            rust: stable
+            target: x86_64-pc-windows-gnu
+          - os: windows-latest
+            rust: stable
+            target: aarch64-pc-windows-msvc
 
-    runs-on: ${{ matrix.os }}
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Get the release version from the tag
-        run: echo "VERSION=${{ github.ref_name }}" >> $GITHUB_ENV
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ matrix.rust }}
+          target: ${{ matrix.target }}
 
-      - name: Show the version
+      - uses: Swatinem/rust-cache@v2
+
+      - name: Set target variables
+        shell: bash
         run: |
-          echo "version is: $VERSION"
+          echo "TARGET_FLAGS=--target ${{ matrix.target }}" >> $GITHUB_ENV
 
-      - name: Build binary
-        uses: houseabsolute/actions-rust-cross@v1
+      - name: Show command used for Cargo
+        shell: bash
+        run: |
+          echo "target flag is: ${{ env.TARGET_FLAGS }}"
+
+      - name: Build release binary
+        shell: bash
+        run: |
+          cargo install cross
+          cross build --verbose --release ${{ env.TARGET_FLAGS }}
+          if [ "${{ matrix.os }}" = "windows-latest" ]; then
+            bin="target/${{ matrix.target }}/release/javcap.exe"
+          else
+            bin="target/${{ matrix.target }}/release/javcap"
+          fi
+          echo "BIN=$bin" >> $GITHUB_ENV
         env:
-          VERSION: ${{ env.VERSION }}
-        with:
-          target: ${{ matrix.target }}
-          args: --release
+          VERSION: ${{ needs.create-release.outputs.version }}
 
-      - name: Publish artifacts and release
-        uses: houseabsolute/actions-rust-release@v0
-        with:
-          executable-name: javcap
-          target: ${{ matrix.target }}
-          extra-files: |
-            README.md
-            LICENSE
+      - name: Determine archive name
+        shell: bash
+        run: |
+          version="${{ needs.create-release.outputs.version }}"
+          echo "ARCHIVE=javcap-$version-${{ matrix.target }}" >> $GITHUB_ENV
+
+      - name: Creating directory for archive
+        shell: bash
+        run: |
+          mkdir -p "$ARCHIVE"
+          cp "$BIN" "$ARCHIVE"/
+          cp LICENSE "$ARCHIVE"/
+
+      - name: Build archive (Windows)
+        shell: bash
+        if: matrix.os == 'windows-latest'
+        run: |
+          7z a "$ARCHIVE.zip" "$ARCHIVE"
+          echo "ASSET=$ARCHIVE.zip" >> $GITHUB_ENV
+
+      - name: Build archive (Unix)
+        shell: bash
+        if: matrix.os != 'windows-latest'
+        run: |
+          tar czf "$ARCHIVE.tar.gz" "$ARCHIVE"
+          echo "ASSET=$ARCHIVE.tar.gz" >> $GITHUB_ENV
+
+      - name: Upload release archive
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
+        run: |
+          version="${{ needs.create-release.outputs.version }}"
+          gh release upload "$version" ${{ env.ASSET }}
