--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,8 @@ self_update = { version = "0.42.0", default-features = false, features = [
     "rustls",
     "compression-flate2",
 ] }
+bon = "3.3.2"
+async-openai = "0.27.2"
 
 [profile.release]
 lto = true
