--- a/crates/spider/Cargo.toml
+++ b/crates/spider/Cargo.toml
@@ -7,13 +7,12 @@ edition = "2021"
 nfo.workspace = true
 video.workspace = true
 config.workspace = true
-app.workspace = true
+http-client.workspace = true
 
-tokio.workspace = true
 anyhow.workspace = true
-ratelimit.workspace = true
 async-trait.workspace = true
-reqwest.workspace = true
 select.workspace = true
 log.workspace = true
 bon.workspace = true
+serde.workspace = true
+tokio.workspace = true
