--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,6 @@ reqwest = { version = "0.12.12", default-features = false, features = [
 uuid = { version = "1.13.1", features = ["v4"] }
 sha256 = "1.5.0"
 colored = "3.0.0"
-select = "0.6.0"
 log = "0.4.25"
 env_logger = "0.11.6"
 self_update = { version = "0.42.0", default-features = false, features = [
@@ -63,6 +62,7 @@ self_update = { version = "0.42.0", default-features = false, features = [
 bon = "3.3.2"
 async-openai = "0.27.2"
 chrono = "0.4.39"
+scraper = "0.22.0"
 
 [profile.release]
 lto = true
