--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,3 +69,6 @@ lto = true
 codegen-units = 1
 panic = "abort"
 strip = true
+
+[workspace.metadata.typos.default.extend-words]
+auther_names = "auther_names"
