--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,8 @@ bon = "3.3.2"
 async-openai = "0.27.2"
 chrono = "0.4.39"
 scraper = "0.22.0"
+educe = "0.6.0"
+pretty_assertions = "1.4.1"
 
 [profile.release]
 lto = true
