--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ chrono = "0.4.39"
 scraper = "0.22.0"
 educe = "0.6.0"
 pretty_assertions = "1.4.1"
+target-triple = "0.1.3"
 
 [profile.release]
 lto = true
