--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -2,7 +2,7 @@ name: daily
 
 on:
   schedule:
-    - cron: "0 5,22 * * *"
+    - cron: "0 22 * * *"
 
 jobs:
   daily-test:
@@ -15,6 +15,8 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
+
+      - uses: Swatinem/rust-cache@v2
 
       - name: Run test
         run: |
