--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     types:
       - opened
+  schedule:
+    - cron: "0 22 * * *"
 
 jobs:
   check:
@@ -29,3 +31,7 @@ jobs:
       - name: Run check
         run: |
           cargo audit
+
+      - name: Run test
+        run: |
+          cargo test --workspace --all-features --color always
