--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,8 +64,10 @@ async-openai = "0.27.2"
 chrono = "0.4.39"
 scraper = "0.22.0"
 educe = "0.6.0"
-pretty_assertions = "1.4.1"
 target-triple = "0.1.3"
+
+pretty_assertions = "1.4.1"
+test-case = "3.3.1"
 
 [profile.release]
 lto = true
