--- a/crates/video/Cargo.toml
+++ b/crates/video/Cargo.toml
@@ -9,3 +9,7 @@ nom.workspace = true
 getset.workspace = true
 log.workspace = true
 bon.workspace = true
+
+[dev-dependencies]
+pretty_assertions.workspace = true
+test-case.workspace = true
